--- a/project/build.properties
+++ b/project/build.properties
@@ -3,6 +3,6 @@
 project.organization=com.razie
 project.name=snakked
 sbt.version=0.7.5.RC0
-project.version=0.1-SNAPSHOT
+project.version=0.1
 build.scala.versions=2.9.0-1
 project.initialize=false
