--- a/project/build.properties
+++ b/project/build.properties
@@ -2,7 +2,7 @@
 #Mon Dec 13 23:48:37 EST 2010
 project.organization=com.razie
 project.name=snakked
-sbt.version=0.7.5.RC0
-project.version=0.1
+sbt.version=0.7.7
+project.version=0.2-SNAPSHOT
 build.scala.versions=2.9.0-1
 project.initialize=false
