--- a/.classpath
+++ b/.classpath
@@ -5,9 +5,9 @@
 	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/razbase"/>
-	<classpathentry kind="lib" path="core/lib_managed/scala_2.9.0-1/compile/scalatest_2.9.0-1.6.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="core/lib_managed/scala_2.9.0-1/compile/json-20090211.jar"/>
-	<classpathentry kind="lib" path="core/lib_managed/scala_2.9.0-1/compile/commons-jxpath-1.3.jar"/>
+	<classpathentry kind="lib" path="core/lib_managed/scala_2.9.1/compile/commons-jxpath-1.3.jar"/>
+	<classpathentry kind="lib" path="core/lib_managed/scala_2.9.1/compile/json-20090211.jar"/>
+	<classpathentry kind="lib" path="core/lib_managed/scala_2.9.1/compile/scalatest_2.9.0-1.6.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
