--- a/project/build.properties
+++ b/project/build.properties
@@ -4,5 +4,5 @@ project.organization=com.razie
 project.name=snakked
 sbt.version=0.7.7
 project.version=0.2-SNAPSHOT
-build.scala.versions=2.9.0-1
+build.scala.versions=2.9.1
 project.initialize=false
