--- a/project/build.properties
+++ b/project/build.properties
@@ -3,6 +3,7 @@
 project.organization=com.razie
 project.name=snakked
 sbt.version=0.7.7
-project.version=0.2-SNAPSHOT
+#project.version=0.2-SNAPSHOT
+project.version=0.2
 build.scala.versions=2.9.1
 project.initialize=false
