--- a/.classpath
+++ b/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="lib" path="core/lib_managed/scala_2.9.1/compile/commons-jxpath-1.3.jar"/>
 	<classpathentry kind="lib" path="core/lib_managed/scala_2.9.1/compile/json-20090211.jar"/>
 	<classpathentry kind="lib" path="core/lib_managed/scala_2.9.1/compile/scalatest_2.9.1-1.6.1.jar"/>
+	<classpathentry kind="lib" path="core/lib_managed/scala_2.9.1/compile/slf4j-api-1.6.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
