--- a/.classpath
+++ b/.classpath
@@ -6,9 +6,9 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/razbase"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="core/lib_managed/scala_2.9.1/compile/commons-jxpath-1.3.jar"/>
-	<classpathentry kind="lib" path="core/lib_managed/scala_2.9.1/compile/json-20090211.jar"/>
-	<classpathentry kind="lib" path="core/lib_managed/scala_2.9.1/compile/scalatest_2.9.1-1.6.1.jar"/>
-	<classpathentry kind="lib" path="core/lib_managed/scala_2.9.1/compile/slf4j-api-1.6.1.jar"/>
+	<classpathentry kind="lib" path="lib_managed/jars/commons-jxpath/commons-jxpath/commons-jxpath-1.3.jar"/>
+	<classpathentry kind="lib" path="lib_managed/jars/org.json/json/json-20090211.jar"/>
+	<classpathentry kind="lib" path="lib_managed/jars/org.scalatest/scalatest_2.9.1/scalatest_2.9.1-1.6.1.jar"/>
+	<classpathentry kind="lib" path="lib_managed/jars/org.slf4j/slf4j-api/slf4j-api-1.6.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
