--- a/.classpath
+++ b/.classpath
@@ -2,9 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="core/src/test/scala"/>
 	<classpathentry kind="src" path="core/src/main/scala"/>
+	<classpathentry kind="src" path="base/src/main/scala"/>
+	<classpathentry kind="src" path="base/src/test/scala"/>
 	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
 	<classpathentry kind="lib" path="lib_managed/jars/org.scalatest/scalatest_2.11/scalatest_2.11-2.1.3.jar"/>
-	<classpathentry kind="lib" path="lib_managed/jars/org.json/json/json-20090211.jar"/>
 	<classpathentry kind="lib" path="lib_managed/jars/commons-jxpath/commons-jxpath/commons-jxpath-1.3.jar"/>
 	<classpathentry kind="lib" path="lib_managed/bundles/org.scala-lang.modules/scala-xml_2.11/scala-xml_2.11-1.0.3.jar"/>
 	<classpathentry kind="lib" path="lib_managed/jars/junit/junit/junit-4.5.jar"/>
@@ -12,6 +13,6 @@
 	<classpathentry kind="lib" path="lib_managed/jars/ch.qos.logback/logback-core/logback-core-1.0.0.jar"/>
 	<classpathentry kind="lib" path="lib_managed/jars/org.slf4j/slf4j-api/slf4j-api-1.6.4.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/razbase"/>
+	<classpathentry kind="lib" path="lib_managed/bundles/org.json/json/json-20160810.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
